Data model first version

--- a/fund_app/notebooks/Summary.ipynb
+++ b/fund_app/notebooks/Summary.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +35,21 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from fund_app.settings import session_scope\n",
-    "from fund_app.data_model.tables import Firm, Fund\n",
+    "import os\n",
+    "import sys\n",
+    "sys.path.insert(0, os.path.abspath('..'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from settings import session_scope\n",
+    "from data_model.tables import Firm, Fund\n",
     "import pandas as pd"
    ]
   },
@@ -51,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -75,20 +88,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
        "      <th>name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>Bestinver</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>5</td>\n",
        "      <td>AZ Valor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>6</td>\n",
        "      <td>Cobas</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -96,20 +113,20 @@
        "</div>"
       ],
       "text/plain": [
-       "        name\n",
-       "0  Bestinver\n",
-       "1   AZ Valor\n",
-       "2      Cobas"
+       "   id       name\n",
+       "0   1  Bestinver\n",
+       "1   5   AZ Valor\n",
+       "2   6      Cobas"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "with session_scope() as s:\n",
-    "    q = s.query(Firm.name)\n",
+    "    q = s.query(Firm)\n",
     "    firms_df = pd.read_sql(q.statement, q.session.bind)\n",
     "    \n",
     "firms_df"
@@ -126,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -150,39 +167,117 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Fund name</th>\n",
        "      <th>Firm name</th>\n",
+       "      <th>Fund name</th>\n",
+       "      <th>isin_code</th>\n",
+       "      <th>id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AZ Valor International FI</td>\n",
        "      <td>AZ Valor</td>\n",
+       "      <td>AZValor Internacional FI</td>\n",
+       "      <td>ES0112611001</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AZ Valor Iberia FI</td>\n",
        "      <td>AZ Valor</td>\n",
+       "      <td>AZValor Iberia FI</td>\n",
+       "      <td>ES0112616000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AZ Valor</td>\n",
+       "      <td>AZValor Blue Chips FI</td>\n",
+       "      <td>ES0112609005</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cobas</td>\n",
+       "      <td>Cobas Selección FI</td>\n",
+       "      <td>ES0124037005</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cobas</td>\n",
+       "      <td>Cobas Internacional FI</td>\n",
+       "      <td>ES0119199000</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cobas</td>\n",
+       "      <td>Cobas Iberia FI</td>\n",
+       "      <td>ES0119184002</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Cobas</td>\n",
+       "      <td>Cobas Grandes Compañías FI</td>\n",
+       "      <td>ES0113728002</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Bestinver</td>\n",
+       "      <td>Bestinfond FI</td>\n",
+       "      <td>ES0114673033</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Bestinver</td>\n",
+       "      <td>Bestinver Internacional FI</td>\n",
+       "      <td>ES0114638036</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Bestinver</td>\n",
+       "      <td>Bestinver Bolsa FI</td>\n",
+       "      <td>ES0147622031</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Bestinver</td>\n",
+       "      <td>Bestinver Grandes Compañías FI</td>\n",
+       "      <td>ES0114561006</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Fund name Firm name\n",
-       "0  AZ Valor International FI  AZ Valor\n",
-       "1         AZ Valor Iberia FI  AZ Valor"
+       "    Firm name                       Fund name     isin_code  id\n",
+       "0    AZ Valor        AZValor Internacional FI  ES0112611001   1\n",
+       "1    AZ Valor               AZValor Iberia FI  ES0112616000   2\n",
+       "2    AZ Valor           AZValor Blue Chips FI  ES0112609005   3\n",
+       "3       Cobas              Cobas Selección FI  ES0124037005   4\n",
+       "4       Cobas          Cobas Internacional FI  ES0119199000   5\n",
+       "5       Cobas                 Cobas Iberia FI  ES0119184002   6\n",
+       "6       Cobas      Cobas Grandes Compañías FI  ES0113728002   7\n",
+       "7   Bestinver                   Bestinfond FI  ES0114673033   8\n",
+       "8   Bestinver      Bestinver Internacional FI  ES0114638036   9\n",
+       "9   Bestinver              Bestinver Bolsa FI  ES0147622031  10\n",
+       "10  Bestinver  Bestinver Grandes Compañías FI  ES0114561006  11"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "with session_scope() as s:\n",
-    "    q = s.query(Fund.name.label('Fund name'), Firm.name.label('Firm name')).join(Fund.firm)\n",
+    "    q = s.query(Firm.name.label('Firm name'), Fund.name.label('Fund name'), Fund.isin_code, Fund.id).join(Fund.firm).order_by(Fund.id)\n",
     "    funds_df = pd.read_sql(q.statement, q.session.bind)\n",
     "    \n",
     "funds_df"
