--- a/fund_app/notebooks/Testing notebook.ipynb
+++ b/fund_app/notebooks/Testing notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -44,6 +44,206 @@
     "from data_model.creates import CreateFirm, CreateFund\n",
     "from data_model.updates import UpdateFund\n",
     "from data_model.tables import Firm, Fund"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scraper.xbrl_scraper import XBRLScraper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scraper = XBRLScraper('../data/az_valor_iberia_H1_17.XML')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([{'isin': 'ES0117160111', 'name': 'CORP FINAN ALBA'},\n",
+       "  {'isin': 'ES0116920333', 'name': 'CATALANA OCCIDENTE'},\n",
+       "  {'isin': 'ES0176252718', 'name': 'MELIA HOTELS INTERNATIONAL SA'},\n",
+       "  {'isin': 'ES0115056139', 'name': 'BOLSAS Y MERCADOS ESPAÑOLES SA'},\n",
+       "  {'isin': 'ES0161560018', 'name': 'NH HOTELES'},\n",
+       "  {'isin': 'ES0110047919', 'name': 'DEOLEO SA'},\n",
+       "  {'isin': 'ES0184262212', 'name': 'VISCOFAN SA'},\n",
+       "  {'isin': 'ES0132945017', 'name': 'TUBACEX'},\n",
+       "  {'isin': 'ES0164180012', 'name': 'MIQUEL Y COSTAS'},\n",
+       "  {'isin': 'ES0157097017', 'name': 'LABORATORIOS ALMIRALL'},\n",
+       "  {'isin': 'ES0124244E34', 'name': 'FUNDACION MAPFRE'},\n",
+       "  {'isin': 'ES0132105018', 'name': 'ACERINOX SA'},\n",
+       "  {'isin': 'ES0184933812', 'name': 'ZARDOYA'},\n",
+       "  {'isin': 'ES0184696013', 'name': 'MA SMOVIL IBERCOM SAOM SA'},\n",
+       "  {'isin': 'ES0105019006', 'name': 'HISPANIA ACTIVOS INMOBILIARIOS'},\n",
+       "  {'isin': 'ES0105022000', 'name': 'APPLUS'},\n",
+       "  {'isin': 'ES0105026001', 'name': 'AXIARE PATRIMONIO SOCIMI SA'},\n",
+       "  {'isin': 'ES0178165017', 'name': 'TECNICAS REUNIDAS SA'},\n",
+       "  {'isin': 'ES0139140174', 'name': 'INMOBILIARIA COLONIAL SA'},\n",
+       "  {'isin': 'ES0129743318', 'name': 'ELECNOR SA'},\n",
+       "  {'isin': 'ES0111845014', 'name': 'ABERTIS INFRAESTRUCTURAS SA'},\n",
+       "  {'isin': 'ES0178430E18', 'name': 'TELEFONICA SA'},\n",
+       "  {'isin': 'ES0157261019', 'name': 'ROVI'}],\n",
+       " [{'bop_pct': '0.70',\n",
+       "   'bop_value': '782527.00',\n",
+       "   'company_isin': 'ES0117160111',\n",
+       "   'eop_pct': '0.00',\n",
+       "   'eop_value': '5290.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '1.63',\n",
+       "   'bop_value': '1815673.00',\n",
+       "   'company_isin': 'ES0116920333',\n",
+       "   'eop_pct': '2.88',\n",
+       "   'eop_value': '4166394.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '0.00',\n",
+       "   'bop_value': '0.00',\n",
+       "   'company_isin': 'ES0176252718',\n",
+       "   'eop_pct': '2.47',\n",
+       "   'eop_value': '3567483.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '1.08',\n",
+       "   'bop_value': '1198074.00',\n",
+       "   'company_isin': 'ES0115056139',\n",
+       "   'eop_pct': '0.00',\n",
+       "   'eop_value': '3162.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '1.97',\n",
+       "   'bop_value': '2200390.00',\n",
+       "   'company_isin': 'ES0161560018',\n",
+       "   'eop_pct': '2.55',\n",
+       "   'eop_value': '3680679.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '0.61',\n",
+       "   'bop_value': '675233.00',\n",
+       "   'company_isin': 'ES0110047919',\n",
+       "   'eop_pct': '0.40',\n",
+       "   'eop_value': '584867.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '3.58',\n",
+       "   'bop_value': '3989278.00',\n",
+       "   'company_isin': 'ES0184262212',\n",
+       "   'eop_pct': '1.42',\n",
+       "   'eop_value': '2048845.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '4.68',\n",
+       "   'bop_value': '5216012.00',\n",
+       "   'company_isin': 'ES0132945017',\n",
+       "   'eop_pct': '8.23',\n",
+       "   'eop_value': '11888008.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '1.70',\n",
+       "   'bop_value': '1893944.00',\n",
+       "   'company_isin': 'ES0164180012',\n",
+       "   'eop_pct': '3.00',\n",
+       "   'eop_value': '4338688.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '0.20',\n",
+       "   'bop_value': '223156.00',\n",
+       "   'company_isin': 'ES0157097017',\n",
+       "   'eop_pct': '0.00',\n",
+       "   'eop_value': '1426.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '0.23',\n",
+       "   'bop_value': '258312.00',\n",
+       "   'company_isin': 'ES0124244E34',\n",
+       "   'eop_pct': '0.00',\n",
+       "   'eop_value': '306.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '1.10',\n",
+       "   'bop_value': '1220265.00',\n",
+       "   'company_isin': 'ES0132105018',\n",
+       "   'eop_pct': '0.27',\n",
+       "   'eop_value': '390843.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '0.00',\n",
+       "   'bop_value': '0.00',\n",
+       "   'company_isin': 'ES0184933812',\n",
+       "   'eop_pct': '3.45',\n",
+       "   'eop_value': '4979766.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '0.00',\n",
+       "   'bop_value': '0.00',\n",
+       "   'company_isin': 'ES0184696013',\n",
+       "   'eop_pct': '4.29',\n",
+       "   'eop_value': '6200889.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '1.34',\n",
+       "   'bop_value': '1494488.00',\n",
+       "   'company_isin': 'ES0105019006',\n",
+       "   'eop_pct': '0.00',\n",
+       "   'eop_value': '1448.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '0.76',\n",
+       "   'bop_value': '844008.00',\n",
+       "   'company_isin': 'ES0105022000',\n",
+       "   'eop_pct': '0.00',\n",
+       "   'eop_value': '1102.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '1.82',\n",
+       "   'bop_value': '2024616.00',\n",
+       "   'company_isin': 'ES0105026001',\n",
+       "   'eop_pct': '0.00',\n",
+       "   'eop_value': '1496.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '0.28',\n",
+       "   'bop_value': '314058.00',\n",
+       "   'company_isin': 'ES0178165017',\n",
+       "   'eop_pct': '3.64',\n",
+       "   'eop_value': '5253613.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '1.74',\n",
+       "   'bop_value': '1943124.00',\n",
+       "   'company_isin': 'ES0139140174',\n",
+       "   'eop_pct': '0.00',\n",
+       "   'eop_value': '763.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '4.58',\n",
+       "   'bop_value': '5103675.00',\n",
+       "   'company_isin': 'ES0129743318',\n",
+       "   'eop_pct': '6.72',\n",
+       "   'eop_value': '9714255.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '0.76',\n",
+       "   'bop_value': '842624.00',\n",
+       "   'company_isin': 'ES0111845014',\n",
+       "   'eop_pct': '0.00',\n",
+       "   'eop_value': '0.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '5.75',\n",
+       "   'bop_value': '6410764.00',\n",
+       "   'company_isin': 'ES0178430E18',\n",
+       "   'eop_pct': '1.93',\n",
+       "   'eop_value': '2787744.00',\n",
+       "   'fund_submission_id': 'TODO'},\n",
+       "  {'bop_pct': '0.49',\n",
+       "   'bop_value': '550239.00',\n",
+       "   'company_isin': 'ES0157261019',\n",
+       "   'eop_pct': '0.00',\n",
+       "   'eop_value': '1707.00',\n",
+       "   'fund_submission_id': 'TODO'}])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scraper.get_companies_info()\n"
    ]
   },
   {
@@ -70,7 +270,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cobas_update = UpdateFund({}, cobas_fund)"
@@ -80,6 +282,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -223,24 +426,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Fund(id: 7; name: Cobas Grandes Compañías FI; firm_id 6>\n",
-      "<Fund(id: 4; name: Cobas Selección FI; firm_id 6>\n",
-      "<Fund(id: 5; name: Cobas Internacional FI; firm_id 6>\n",
-      "<Fund(id: 6; name: Cobas Iberia FI; firm_id 6>\n",
-      "<Fund(id: 8; name: Bestinfond FI; firm_id 1>\n",
-      "<Fund(id: 9; name: Bestinver Internacional FI; firm_id 1>\n",
-      "<Fund(id: 10; name: Bestinver Bolsa FI; firm_id 1>\n",
-      "<Fund(id: 11; name: Bestinver Grandes Compañías FI; firm_id 1>\n",
-      "<Fund(id: 2; name: AZValor Iberia FI; firm_id 5>\n",
-      "<Fund(id: 1; name: AZValor Internacional FI; firm_id 5>\n",
-      "<Fund(id: 3; name: AZValor Blue Chips FI; firm_id 5>\n"
+      "ES0113728002 Cobas Grandes Compañías FI\n",
+      "ES0124037005 Cobas Selección FI\n",
+      "ES0119199000 Cobas Internacional FI\n",
+      "ES0119184002 Cobas Iberia FI\n",
+      "ES0114673033 Bestinfond FI\n",
+      "ES0114638036 Bestinver Internacional FI\n",
+      "ES0147622031 Bestinver Bolsa FI\n",
+      "ES0114561006 Bestinver Grandes Compañías FI\n",
+      "ES0112616000 AZValor Iberia FI\n",
+      "ES0112611001 AZValor Internacional FI\n",
+      "ES0112609005 AZValor Blue Chips FI\n"
      ]
     }
    ],
@@ -248,7 +451,7 @@
     "with session_scope() as s:\n",
     "    q = s.query(Fund).all()\n",
     "    for f in q:\n",
-    "        print(f)"
+    "        print(f.isin_code, f.name)"
    ]
   },
   {
