--- a/fund_app/notebooks/XBRL Parser.ipynb
+++ b/fund_app/notebooks/XBRL Parser.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -42,13 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "tree = etree.parse('./data/az_valor_iberia_H1_17.XML')\n",
-    "tree = etree.parse('./data/bestinver_iberia_H1_17.XML')\n",
-    "tree = etree.parse('./data/cobas_iberia_H1_17.XML')\n",
+    "tree = etree.parse('../data/az_valor_iberia_H1_17.XML')\n",
+    "tree = etree.parse('../data/bestinver_iberia_H1_17.XML')\n",
+    "tree = etree.parse('../data/cobas_iberia_H1_17.XML')\n",
     "\n",
     "root = tree.getroot()\n",
     "gestora = 'AZ VALOR'\n",
@@ -62,6 +66,204 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import xml.etree.ElementTree as ET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tree = ET.parse('../data/az_valor_iberia_H1_17.XML')\n",
+    "root = tree.getroot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import untangle\n",
+    "obj = untangle.parse('../data/az_valor_iberia_H1_17.XML')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = obj.xbrli_xbrl.xbrli_context[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies = obj.xbrli_xbrl.iic_fim_InformeFIM.iic_fim_DatosFondoCompartimentoFIM.iic_fim_InversionesFinancierasFIM.iic_com_InversionesFinancierasValorEstimado.iic_com_InversionesFinancierasInterior.iic_com_InversionesFinancierasRVCotizada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,  b = None, None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIM_S12017_V-87393237_ia\n",
+      "0.00\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "2.88\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "2.47\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.00\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "2.55\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.40\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "1.42\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "8.23\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "3.00\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.00\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.00\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.27\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "3.45\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "4.29\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.00\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.00\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.00\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "3.64\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.00\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "6.72\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.00\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "1.93\n",
+      "FIM_S12017_V-87393237_ipy\n",
+      "FIM_S12017_V-87393237_ia\n",
+      "0.00\n",
+      "FIM_S12017_V-87393237_ipy\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in companies:\n",
+    "    for b in c.iic_com_InversionesFinancierasImporte:\n",
+    "        element = b.iic_com_InversionesFinancierasPorcentaje\n",
+    "        value = b.iic_com_InversionesFinancierasValor\n",
+    "        \n",
+    "        print(element.get_attribute('contextRef'))\n",
+    "        if element.get_attribute('contextRef').endswith('ia'):\n",
+    "            print(element.cdata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Element(name = iic_com_InversionesFinancierasPorcentaje, attributes = {'unitRef': 'pure', 'decimals': '2', 'contextRef': 'FIM_S12017_V-87393237_ipy'}, cdata = 1.63)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.iic_com_InversionesFinancierasPorcentaje"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Element(name = iic_com_InversionesFinancierasRVCotizada, attributes = {}, cdata = \n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       ")"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comp[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,6 +274,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -173,7 +376,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cobas = XBRLParser('COBAS', 'COBAS IBERIA', './data/cobas_iberia_H1_17.XML')\n",
